Agregando botón de Leer más

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,7 +40,7 @@
             <div class="blog-news-info-container">
                 <h2>Una mirada a los inicios de la computación</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto error assumenda recusandae exercitationem at ratione natus aperiam reprehenderit? Aperiam, eaque? Ducimus quod facilis voluptates nihil molestias voluptate expedita, aspernatur quas?</p>
-                <a href="" class="blog-button"></a>
+                <a href="" class="blog-button">Leer más</a>
             </div>
         </section>
 
