Pequeños ajustes al footer

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -87,8 +87,8 @@
         </section>
     </main>
     <footer>
-        <p>Desarrollado por</p>
-        <p>Gaby Nieva Paredes</p>
+        <p>Desarrollado por <br>
+        Gaby Nieva Paredes</p>
     </footer>
 </body>
 </html>
