--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -74,7 +74,7 @@
             <div>
                 <img src="../assets/img/006-like.png" alt="">
                 <div class="contact-right">
-                    <a href="/">Contacto</a>
+                    <a href="../pages/contacto.html">Contacto</a>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia hic provident ipsa.</p>
                 </div>
             </div>
