Agregando botones de opcion o radio button

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,6 +58,27 @@
                     <option value="Gafas">Gafas de realidad aumentada</option>
                 </datalist>
             <br> <br>
+            <!-- Botones de opción o radio button -->
+             <label for="gusto">¿Te gusta este blog?</label>
+                <br>
+                <input type="radio" name="gusto" id="si"
+                value="Sí" checked>
+                <label for="si">Sí</label>
+                <br>
+                <input type="radio" name="gusto" id="no"
+                value="No">
+                <label for="no">No</label>
+                <br>
+                <input type="radio" name="gusto" id="no_se"
+                value="No_se">
+                <label for="no_se">No estoy seguro</label>
+                <br>
+                <br><br>
+
+
+
+
+
             <label for="mensaje">Escribe tu mensaje: </label>
             <textarea name="mensaje" id="mensaje"></textarea>
             <button class="blog-button"  type="submit">
