Agregando un calendario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,9 +75,19 @@
                 <br>
                 <br><br>
 
-
-
-
+                <!-- Casillas de verificación o check box -->
+                <label for="lenguajes">Selecciona tus lenguajes favoritos</label>
+                    <br>
+                    <input type="checkbox" id="leng1" value="Java">
+                    <label for="leng1">Java</label><br>
+                    <input type="checkbox" id="leng2" value="Python">
+                    <label for="leng2">Python</label><br>
+                    <input type="checkbox" id="leng3" value="C++">
+                    <label for="leng3">C++</label>
+                <br> <br>
+                <label for="calendario">Selecciona una fecha:</label>
+                <input type="datetime-local" name="calendario" id="calendario">
+                <br><br>
 
             <label for="mensaje">Escribe tu mensaje: </label>
             <textarea name="mensaje" id="mensaje"></textarea>
