Agregando otros tipos de calendarios

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -85,9 +85,30 @@
                     <input type="checkbox" id="leng3" value="C++">
                     <label for="leng3">C++</label>
                 <br> <br>
+                <!-- Ejemplo de calendario estándar -->
                 <label for="calendario">Selecciona una fecha:</label>
                 <input type="datetime-local" name="calendario" id="calendario">
                 <br><br>
+
+                <!-- Otro ejemplo de calendario: para hora -->
+                <label for="hora">Hora:</label>
+                <input type="time" name="hora" id="hora">
+                <br><br>
+
+                <!-- Calendario para día -->
+                 <label for="fecha">Fecha:</label>
+                 <input type="date" name="fecha" id="fecha">
+                 <br><br>
+
+                 <!-- Calendario para semana -->
+                  <label for="semana">Semana:</label>
+                  <input type="week" name="semana" id="semana">
+                  <br><br>
+
+                  <!-- Calendario para mes -->
+                   <label for="mes">Mes:</label>
+                   <input type="month" name="mes" id="mes">
+                   <br><br>
 
             <label for="mensaje">Escribe tu mensaje: </label>
             <textarea name="mensaje" id="mensaje"></textarea>
